--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     var facebookUrl = 'fb://profile/111600232232653';
     var facebookUrlLong = 'https://www.facebook.com/labrumford1/reviews';
-    var socialMediaOrder = 'google,facebook';
+    var socialMediaOrder = 'google,facebook,yelp,homemade_rating';
   </script>
   <div class="main-review-content-container">
 
@@ -194,6 +194,16 @@
 	  <li>
 	    <a onclick="_gaq.push(['_trackEvent', 'Review Button', 'click', 'Facebook']);" href="https://www.facebook.com/LabrumFord1/reviews" target="_blank">
 	      <img src="https://landolabrum.github.io/review/static/img/main/index/btn-facebookReview.jpg" />
+	    </a>
+	  </li>
+	</ul>
+	<a onclick="_gaq.push(['_trackEvent', 'Review Button', 'click', 'yelp']);" href="https://www.yelp.com/writeareview/biz/YlfI40nv5MhcJ3GlhX_wcg?return_url=%2Fbiz%2FYlfI40nv5MhcJ3GlhX_wcg" target="_blank">
+	      <img src="https://landolabrum.github.io/review/static/img/main/index/btn-yelpReview.jpg" />
+	    </a>
+	  </li>
+	</ul>
+	<a onclick="_gaq.push(['_trackEvent', 'Review Button', 'click', 'homemade_rating']);" href="" target="_blank">
+	      <img src="https://landolabrum.github.io/review/static/img/main/index/btn-yelpReview.jpg" />
 	    </a>
 	  </li>
 	</ul>
